Add inpage search as a dumby component in includes

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -15,6 +15,7 @@
 
 @import 'components/picture';
 @import 'components/featured-media';
+@import 'components/search';
 
 ///////////////////////////////////////////
 // DLS css
