Add in basic desktop in page nav styling

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -16,6 +16,7 @@
 @import 'components/picture';
 @import 'components/featured-media';
 @import 'components/search';
+@import 'components/in-page-nav';
 
 ///////////////////////////////////////////
 // DLS css
