--- a/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/users-search.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/users-search.html
@@ -43,15 +43,21 @@
         </h1>
 
 
-        <div class="">
-          <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-2">
-          <div>
-            <a class="nhsuk-u-margin-right-4 nhsuk-link-active nhsuk-u-font-weight-bold" href="#">Search users</a>
-            <a class="nhsuk-u-margin-right-4" href="#">Register users</a>
-            {# <a class="nhsuk-u-margin-right-4" href="#">Send welcome message</a> #}
-            <a class="nhsuk-u-margin-right-4" href="#">Bulk opperation</a>
-          </div>
-          <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-6">
+        <div class="proto-in-page-nav">
+          <ul class="proto-in-page-nav__list">
+            <li class="proto-in-page-nav__item proto-in-page-nav__item--active">
+              <a class="proto-in-page-nav__link" href="#">Search users</a>
+            </li>
+            <li class="proto-in-page-nav__item">
+              <a class="proto-in-page-nav__link" href="#">Register users</a>
+            </li>
+            {# <li class="proto-in-page-nav__item">
+              <a class="proto-in-page-nav__link" href="#">Send welcome message</a>
+            </li> #}
+            <li class="proto-in-page-nav__item">
+              <a class="proto-in-page-nav__link" href="#">Bulk opperation</a>
+            </li>
+          </ul>
         </div>
 
         <p class="nhsuk-lead-text nhsuk-body-l">Lorem ipsum dolor sit amet4 consectetur adipisicing elit. Rerum repellendus consequuntur odio, dolore nostrum eveniet.</p>
