Update users page layout

--- a/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/index.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/index.html
@@ -45,7 +45,7 @@
               <a class="nhsuk-link nhsuk-body-l nhsuk-u-margin-bottom-4" href="#groups">Groups</a>
           </li>
           {# 
-          This manot be needed for frameworks
+          This may not be needed for frameworks
           <li>
               <a class="nhsuk-link nhsuk-body-l nhsuk-u-margin-bottom-4" href="#Courses">Courses</a>
           </li> #}
