Commetn quick filters

--- a/app/views/includes/search-with-listing.html
+++ b/app/views/includes/search-with-listing.html
@@ -13,13 +13,13 @@
   </div> #}
   <div class="nhsuk-grid-column-one-third">
     <div class="search-filters">
-      <div class="search-filters__quick-filters"> 
+      {# <div class="search-filters__quick-filters"> 
         <h2 class="nhsuk-heading-s">Quick filters</h2>
         {{ tag({ text: "Admin" })}}
         {{ tag({ text: "Learner" })}}
       </div>
 
-      <hr class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-4">
+      <hr class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-4"> #}
 
       <div class="search-filters__filter-lists">
         <h2 class="nhsuk-heading-s">Filters</h2>
