Update Featured media component

--- a/app/views/components/featured-media.njk
+++ b/app/views/components/featured-media.njk
@@ -9,7 +9,7 @@
 
         <div class="featured-media__content">
           <div class="wysiwyg-content">
-              {{ content }}
+              {{ content | safe }}
           </div>
         </div>
       </div>
