--- a/app/views/prototypes/admin-frameworks/select-a-framework/index.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/index.html
@@ -4,9 +4,9 @@
 
 <!-- Extends the layout from /views/layout.html -->
 {% extends 'layouts/layout.html' %}
-<!-- 
+<!--
   In /views/layout.html you can:
-  - change the header and footer 
+  - change the header and footer
   - add custom CSS and JavaScript
 -->
 
@@ -41,47 +41,26 @@ Welcome - DLS prototype
 
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
-        <div class="nhsuk-u-reading-width">
-          <ul class="nhsuk-list">
 
-            <li class="nhsuk-list-item">
-              <h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-2">
-                <a href="/prototypes/admin-frameworks/select-a-framework/framework-dashboard">
-                  IV Therapy Passport
-                </a>
-              </h2>
-              <p class="nhsuk-body-s nhsuk-u-margin-bottom-0">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium consequatur quaerat asperiores harum nostrum cum commodi alias modi labore similique cupiditate dolor repellendus recusandae ut sint, ab iste voluptatibus facere?
-              </p>
-              <hr class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-4">
-            </li>
+        {% from "components/listing.njk" import listing %}
 
-            <li class="nhsuk-list-item">
-              <h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-2">
-                <a href="#">
-                  Step 1
-                </a>
-              </h2>
-              <p class="nhsuk-body-s nhsuk-u-margin-bottom-0">
-                National Proficiency Framework for Registered Nurses in Adult Critical Care
-              </p>
-              <hr class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-4">
-            </li>
+        {% set selectAFramework = [{
+            "heading": "IV Therapy Passport",
+            "href": "/prototypes/admin-frameworks/select-a-framework/framework-dashboard",
+            "content": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium consequatur quaerat asperiores harum nostrum cum commodi alias modi labore similique cupiditate dolor repellendus recusandae ut sint, ab iste voluptatibus facere?"
+          },{
+            "heading": "Step 1",
+            "href": "#",
+            "content": "National Proficiency Framework for Registered Nurses in Adult Critical Care"
+          },{
+            "heading": "Step 2",
+            "href": "#",
+            "content": "National Proficiency Framework for Registered Nurses in Adult Critical Care"
+          }]
+        %}
 
-            <li class="nhsuk-list-item">
-              <h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-2">
-                <a href="#">
-                  Step 2
-                </a>
-              </h2>
-              <p class="nhsuk-body-s nhsuk-u-margin-bottom-0">
-                National Proficiency Framework for Registered Nurses in Adult Critical Care
-              </p>
-              <hr class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-4">
-            </li>
+        {{ listing(listing=selectAFramework) }}
 
-          </ul>
-        </div>
       </div>
     </div>
   </div>
